[package]
name = "ap_client"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.14"
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize","debug"] }
messages = { git = "https://github.com/The-Null-Pointer-Patrol/messages.git"}
ap_transmitter = { git = "https://github.com/di-bon/ap_transmitter.git" }
ap_listener = { git = "https://github.com/di-bon/ap_listener.git" }
ap_sc_notifier = { git = "https://github.com/di-bon/ap_sc_notifier.git" }
log = "0.4.25"
regex = "1.11.1"
rand = "0.9.0"
image = "0.24"
